--- a/android-developer.html
+++ b/android-developer.html
@@ -103,7 +103,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endava.referrals.selectminds.com/jobs/android-developer-5135'>Android Developer - Endava Careers</a></h5> 
+<h5><a href='https://endava.referrals.selectminds.com/jobs/android-developer-5135'>Android Developer - Endava Careers</a></h5> 
 <p><span class="badge badge-light">Buenos Aires Buenos Aires, Argentina</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -111,7 +111,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://growara.recruitee.com/o/android-developer'>
+<h5><a href='https://growara.recruitee.com/o/android-developer'>
       Android Developer - Growara
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -172,7 +172,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">El Segundo, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999697965300-android-developer'>JobTeaser Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999697965300-android-developer'>JobTeaser Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -230,7 +230,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Manchester, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-United-Kingdom-Principal-Android-Developer/704'>Principal Android Developer - Career Portal</a></h5> 
+<h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-United-Kingdom-Principal-Android-Developer/704'>Principal Android Developer - Career Portal</a></h5> 
 <p><span class="badge badge-light">Manchester, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -361,7 +361,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Amsterdam Amsterdam, Netherlands</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914834'>Job Application for Android Developer (eCommerce Platform) at Algorythma</a></h5> 
+<h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914834'>Job Application for Android Developer (eCommerce Platform) at Algorythma</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -378,11 +378,11 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4472394002'>Job Application for Android Developer - Store Pick at Ocado Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4472394002'>Job Application for Android Developer - Store Pick at Ocado Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/griddynamics/job/oFljbfwe'>Grid Dynamics Careers - Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/griddynamics/job/oFljbfwe'>Grid Dynamics Careers - Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -394,11 +394,11 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Santa Clara, CA  Redwood City</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://www.qptech.ie/jobs/android-developer-2/'>Android Developer | IT Jobs in Limerick, Cork &amp; Dublin</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.qptech.ie/jobs/android-developer-2/'>Android Developer | IT Jobs in Limerick, Cork &amp; Dublin</a></h5> 
 <p><span class="badge badge-light">Dublin  Dublin</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getchip.recruitee.com/o/android-developer-london'>
+<h5><a href='https://getchip.recruitee.com/o/android-developer-london'>
       Android Developer - Chip
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
@@ -451,7 +451,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/leiainc/jobs/1903644'>Job Application for Junior Android Developer - Automotive at LEIA Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/leiainc/jobs/1903644'>Job Application for Junior Android Developer - Automotive at LEIA Inc.</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -467,7 +467,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://karmarama.workable.com/j/7D5726D33D'>Karmarama - Jobs: Senior Android Developer - Apply online</a></h5> 
+<h5><a href='https://karmarama.workable.com/j/7D5726D33D'>Karmarama - Jobs: Senior Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
